--- a/main.tex
+++ b/main.tex
@@ -833,7 +833,7 @@ ValueError: this array has more than one jagged array structure
 
 \begin{frame}{Relationship to other packages}
 \large
-\vspace{0.5 cm}
+\vspace{0.4 cm}
 \begin{columns}
 \column{1.05\linewidth}
 \begin{itemize}\setlength{\itemsep}{0.25 cm}
@@ -847,17 +847,17 @@ ValueError: this array has more than one jagged array structure
 
 \item \textcolor{darkblue}{ROOT:} particle physics data analysis; I/O is columnar for better compression, but in-memory data are C++ objects.
 \end{itemize}
-\end{columns}
 
-\vspace{0.5 cm}
-\uncover<2->{\textcolor{red}{Awkward Array's focus is {\it not} I/O or ``flat math,'' it's the structure manipulation that physicists regularly need to do to analyze particle decays.}}
+\vspace{0.4 cm}
+\uncover<2->{\textcolor{red}{Awkward Array's focus is {\it not} I/O or numerical math, it's the structure manipulation that physicists regularly need to analyze particle decays.}}
+\end{columns}
 \end{frame}
 
 \begin{frame}{}
 \LARGE
 \vspace{1 cm}
 \begin{center}
-Examples of Awkward Array's focus: \\ how it solves various physics problems
+\textcolor{darkblue}{Examples of Awkward Array's focus:} \\ how it solves various physics problems
 \end{center}
 \end{frame}
 
@@ -882,8 +882,8 @@ for event in dataset:
 {\bf Array programming:} 
 \small
 \begin{minted}{python}
-dataset["A"] = dataset["X"].cross(dataset["Y"])
-dataset["B"] = dataset["X"].choose(2)
+dataset["A"] = dataset["X"].cross(dataset["Y"])      # cross-join
+dataset["B"] = dataset["X"].choose(2)                # self-join
 \end{minted}
 \end{frame}
 
@@ -952,9 +952,9 @@ dataset["byevent"]     = events["A"][events["A"].max() > cut]
 <JaggedArray [[ 1.1,   2.2,  3.3], [  4.4,   5.5], [ 6.6,  7.7,  8.8]]>
 
 >>> mask
-<JaggedArray [        True,             False,             True      ]>
+array(       [        True,             False,             True      ])
 
->>> jmask
+>>> jaggedmask
 <JaggedArray [[True, False, True], [False, False], [True, True, True]]>
 \end{minted}
 
@@ -967,7 +967,7 @@ Flat array of booleans does what Numpy does; jagged booleans selects within each
 >>> x[mask]
 <JaggedArray [[1.1 2.2 3.3] [6.6 7.7 8.8]]>
 
->>> x[jmask]
+>>> x[jaggedmask]
 <JaggedArray [[1.1 3.3] [] [6.6 7.7 8.8]]>
 \end{minted}
 \end{columns}
@@ -1015,9 +1015,9 @@ only_the_best = dataset["best"].flatten()
 <JaggedArray [[ 1.1, 2.2, 3.3, 4.4], [5.5, 6.6], [7.7, 8.8, 9.9]]>
 
 >>> index
-<JaggedArray [-1, 0, 0]>
+array([-1, 0, 0])
 
->>> jindex
+>>> jaggedindex
 <JaggedArray [[0, 0, -1], [0, 0, -1], [0, 0, -1]]>
 \end{minted}
 
@@ -1030,7 +1030,7 @@ Flat array of integers does what Numpy does; jagged indexes takes from each inne
 >>> x[index]
 <JaggedArray [[7.7 8.8 9.9] [1.1 2.2 3.3 4.4] [1.1 2.2 3.3 4.4]]>
 
->>> x[jindex]
+>>> x[jaggedindex]
 <JaggedArray [[1.1 1.1 4.4] [5.5 5.5 6.6] [7.7 7.7 9.9]]>
 \end{minted}
 \end{columns}
