--- a/main.tex
+++ b/main.tex
@@ -1060,6 +1060,32 @@ leptons = electrons \textcolor{darkgreen}{\textbf{union}} muons
 \end{Verbatim}
 \end{frame}
 
+\begin{frame}{Project status}
+\large
+\begin{columns}
+\column{1.05\linewidth}
+\begin{center}
+\includegraphics[width=0.9\linewidth]{pip-scientificlinux-uproot.pdf}
+\end{center}
+
+\vspace{-0.35 cm}
+\begin{itemize}
+\item Made a dependency of uproot (reads particle physics data files) last September.
+
+\textcolor{gray}{\normalsize ROOT file $\to$ Numpy or Awkward arrays, depending on structure (majority Awkward).}
+
+\item Hundreds of pip-installations per day; about 1.5 GitHub issues per week.
+\item Several user-contributed methods, a dozen more inspired by user needs.
+\end{itemize}
+\end{columns}
+\end{frame}
+
+\begin{frame}{}
+\large
+
+
+\end{frame}
+
 
 
 \begin{frame}{}
