--- a/main.tex
+++ b/main.tex
@@ -1126,17 +1126,21 @@ The join-map-filter-reduce cycle would be useful in genetics: at each site of a 
 \end{frame}
 
 \begin{frame}{Thanks}
+\vspace{0.35 cm}
 Many people have been helpful in this work:
 \begin{itemize}
 \item Jaydeep Nandi (GSoC): clever algorithms for \mintinline{python}{cross}, \mintinline{python}{pairs}, and jagged reduce
 \item Charles Escott (GSoC): investigation into pybind11 and C++
-\item Nick Smith (Fermilab): clever algorithms for \mintinline{python}{choose}, \mintinline{python}{argmax}, \mintinline{python}{argsort}
-\item Jonas Rembser (LLR-\'Ecole Polytechnique): clever algorithm for \mintinline{python}{concatenate}
-\item Mason Proffitt (U.\ Washington): many bug reports and fixes
 \item The Coffea Team (Fermilab): extensive feedback from use in CMS physics
-\item Alistair Miles and Gavin Band (Wellcome Centre, Oxford): conversations about Zarr and genetics
+\item Nick Smith (Fermilab): clever algorithms for \mintinline{python}{choose}, \mintinline{python}{argmax}, \mintinline{python}{argsort}
+\item Jonas Rembser (LLR-\'Ecole Polytechnique): clever algorithms for \mintinline{python}{concatenate}
+\item Mason Proffitt (U.\ Washington): stress tests, bug reports, and fixes
+\item Henry Schreiner (Princeton): tests and feedback on HDF5 persistence
+\item Joosep Pata (Caltech): exploring Awkward Array on GPUs
+\item Alistair Miles and Gavin Band (Oxford): conversations about Zarr and genetics
 \item The XND Team: conversations about scope and direction of XND
-\item Wes McKinney (Ursa Labs) and Julien Le Dem (WeWork): conversations about Apache Arrow
+\item Wes McKinney and Julien Le Dem: conversations about Apache Arrow
+\item National Science Foundation (grants ACI-1450377 and PHY-1624356)
 \end{itemize}
 \end{frame}
 
