--- a/main.tex
+++ b/main.tex
@@ -56,6 +56,14 @@
 
 % START START START START START START START START START START START START START
 
+\begin{frame}{}
+\vspace{-0.05 cm}
+\begin{columns}
+\column{1.2\linewidth}
+\includegraphics[width=\linewidth]{iris-hep-website.png}
+\end{columns}
+\end{frame}
+
 \begin{frame}{Motivation: particle physics analysis}
 \Large
 \vspace{0.35 cm}
